# Bill-Buddy-Check-Splitter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.py
src/: web.py
src/api/internal/: router.py
src/api/internal/views/: probes.py
src/bot/: bot.py
src/bot/handlers/: add_friend_handler.py  start_handler.py  user_commands.py
src/bot/keyboards/: inline.py
src/bot/messages/: add_friend.py  base.py  start.py
src/core/configs/: logging.py  telegram.py
